syntax = "proto3";


message BookScooterRequest {
    string scooter_id = 1;
    string start = 2;
    string email = 3;
}

message BookScooterResponse {
    int64 id = 1;
    string start = 2;
    string user_email = 3;
    string scooter_id = 4;
    string end = 5;
}

message EndRideRequest {
    int64 id = 1;
}

message GetBookingRequest {
    int64 id = 1;
}

message GetAllBookingsResponse {
    repeated BookScooterResponse bookings = 1;
}

message Empty {}

service BookingsService {
    rpc BookScooter(BookScooterRequest) returns (BookScooterResponse);
    rpc EndRide(EndRideRequest) returns (BookScooterResponse);
    rpc GetBooking(GetBookingRequest) returns (BookScooterResponse);
    rpc GetAllBookings(Empty) returns (GetAllBookingsResponse);
}

